--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,13 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.rover12421.opensource/JFontChooser -->
+        <dependency>
+            <groupId>com.rover12421.opensource</groupId>
+            <artifactId>JFontChooser</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+
+    </dependencies>
 </project>
